fixed button spacing

--- a/text.css
+++ b/text.css
@@ -56,9 +56,10 @@
 .tab button {
   background-color: rgb(0, 0, 0);
   color: #ffffff;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   margin-left: 0px;
   margin-right: 0px;
+  margin-top: 10px;
   border: 2px solid rgb(255, 255, 255);
   outline: none;
   cursor: pointer;
